--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vending-machine",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://vovareka23.github.io/vending-machine/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
